--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "lodash.isequal": "^4.5.0",
+    "nanoid": "^3.1.25",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
